syntax = "proto3";

package authorization;

import "google/protobuf/timestamp.proto";

service UserRoleService {
  rpc AssignRoleToUser(AssignRoleToUserRequest) returns (AssignRoleToUserResponse);
  rpc RemoveRoleFromUser(RemoveRoleFromUserRequest) returns (RemoveRoleFromUserResponse);
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse);
  rpc GetRoleUsers(GetRoleUsersRequest) returns (GetRoleUsersResponse);
}

message UserRole {
  string id = 1;
  string user_id = 2;
  string role_id = 3;
  google.protobuf.Timestamp assigned_at = 4;
}

// Assign Role to User
message AssignRoleToUserRequest {
  string user_id = 1;
  string role_id = 2;
}

message AssignRoleToUserResponse {
  bool success = 1;
  string message = 2;
}

// Remove Role from User
message RemoveRoleFromUserRequest {
  string user_id = 1;
  string role_id = 2;
}

message RemoveRoleFromUserResponse {
  bool success = 1;
  string message = 2;
}

// Get User Roles
message GetUserRolesRequest {
  string user_id = 1;
}

message GetUserRolesResponse {
  repeated string role_ids = 1;
  bool success = 2;
  string message = 3;
}

// Get Role Users
message GetRoleUsersRequest {
  string role_id = 1;
}

message GetRoleUsersResponse {
  repeated string user_ids = 1;
  bool success = 2;
  string message = 3;
}

